stack.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
    se Crea un VPC con dos bases de Datos internas
    en subredes publicas.

Resources:
    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: 10.0.1.0/24
            EnableDnsSupport: true
            EnableDnsHostnames: true
    
    SubnetMySQL:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
    
    SubnetPostgres:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
    
    SubnetPrivate1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            MapPublicIpOnLaunch: false

    SubnetPrivate2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            MapPublicIpOnLaunch: false

    InternetGateway:
      Type: AWS::EC2::InternetGateway
    
    VPCGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
          VpcId: !Ref VPC
          InternetGatewayId: !Ref InternetGateway

    SubnetRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC

    SubnetMySQLRoute:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref SubnetRouteTable
            SubnetId: !Ref SubnetMySQL
    
    SubnetPostgresRoute:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref SubnetRouteTable
            SubnetId: !Ref SubnetPostgres

    InternetGatewayRoute:
        Type: AWS::EC2::Route
        DependsOn: !Ref VPCGatewayAttachment
        Properties:
            RouteTableId: !Ref SubnetRouteTable
            GatewayId: !Ref InternetGateway
    
    SecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        VpcId: !Ref VPC
        GroupName: VPC-DMS
        GroupDescription: Default Security Group VPC
        SecurityGroupIngress:
            - IpProtocol: tcp
              CidrIp: 0.0.0.0/0
              Description: Security Group Ingrees to MySQL
              FromPort: 3306
              ToPort: 3306
            - IpProtocol: tcp
              CidrIp: 0.0.0.0/0
              Description: Security Group Ingrees to Postgres
              FromPort: 5432
              ToPort: 5432

#Grupos de Parámetros RDS

    RDSMySQLParameterGroup:
        Type: AWS::RDS::DBParameterGroup
        Properties:
            DBParameterGroupName: dms-mysql-parameters 
            Description: Group for specifying binary log settings for replication
            Family: mysql8.0
            Parameters:
                binlog_checksum: NONE
                binlog_format: ROW
    
    RDSPostgresParameterGroup:
        Type: AWS::RDS::DBParameterGroup
        Properties:
            DBParameterGroupName: dms-postgresql-parameters 
            Description: Group for specifying role setting for replication
            Family: postgres13
            Parameters:
                session_replication_role: replica
    
    #Base de Datos RDS

    RDSDBInstance:
        Type: AWS::RDS::DBInstance
        Properties:
            Engine: MySQL
            EngineVersion: MySQL 8.0.32
            DBInstanceIdentifier: dms-mysql
            MasterUsername: admin
            MasterUserPassword: changeit
            DBInstanceClass: db.t2.micro
            VPCSecurityGroups:
              - !Ref SecurityGroup
            AvailabilityZone: sa-east-1
            DBName: dms_sample
            DBParameterGroupName: !Ref RDSMySQLParameterGroup
